# obstacle-course-linux

./: .gitignore  README.md  app.json  babel.config.cjs  index.html  index.js  metro.config.cjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: RELEASE_NOTES.md
.github/workflows/: deploy-pages.yml  release.yml
plugins/: withFmtConstevalFix.cjs
src/: App.native.tsx  App.tsx  data.ts  index.css  main.tsx  modal.tsx  routing.d.ts  routing.native.tsx  routing.web.ts  storage.d.ts  storage.native.ts  storage.web.ts  theme.tsx  ui.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: default.json
src-tauri/e2e/: app.spec.ts  fixtures.ts  playwright.config.ts
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/pages/: Async.tsx  Catalog.tsx  CatalogItem.tsx  Forms.tsx  Home.tsx  Interactions.tsx  NotFound.tsx  Settings.tsx
src/types/: react-native.d.ts  react-native.ts
tests/: obstacle-course.spec.ts
